--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vueuse/motion": "^3.0.3",
     "tailwindcss": "^4.1.13",
     "vue": "^3.5.18",
+    "vue-material-design-icons": "^5.3.1",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
