--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "@vueuse/motion": "^3.0.3",
+    "primeicons": "^7.0.0",
     "tailwindcss": "^4.1.13",
     "vue": "^3.5.18",
     "vue-material-design-icons": "^5.3.1",
