--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
-    "@vueuse/motion": "^3.0.3",
+    "motion-v": "^1.7.4",
     "primeicons": "^7.0.0",
     "tailwindcss": "^4.1.13",
     "vue": "^3.5.18",
@@ -23,6 +23,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "typescript": "~5.8.3",
+    "unplugin-vue-components": "^30.0.0",
     "vite": "^7.1.2",
     "vite-svg-loader": "^5.1.0",
     "vue-tsc": "^3.0.5"
